--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -190,18 +190,18 @@
 
 - date: 4/7
   title: >
-    Week 12: <strong>No classes – CMU Carnival</strong>
+    Week 12: <strong>Ethics and long-term</strong>
   topics:
-    - None!
-  readings:
-    - None!
   
+  readings:
+
 - date: 4/14
   title: >
-    Week 13: <strong>Modeling social knowledge and memory</strong>
+    Week 13: <strong>No classes – CMU Carnival</strong>
   topics:
-  
+    - None!
   readings:
+    - None!
   
 - date: 4/21
   title: >
