--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -200,15 +200,15 @@
     - What are the potential ethical issues related to artificial social agents? From all the ethical issues related to AI technologies in general, which ones are particularly important in artificial social intelligence?
     - What are the design principles and research strategies that we should consider when building artificial social intelligence? As academic researchers, how can we help design and implement these principles and strategies? In our own research, how to integrate these principles?
   readings:
-    - <a href=" ">Are Friends Electric? The Benefits and Risks of Human-robot Relationships</a> <br/>
-    - <a href=" ">Ethics of Artificial Intelligence and Robotics</a> <br/>
-    - <a href=" ">Formalizing Trust in Artificial Intelligence&#58; Prerequisites, Causes and Goals of Human Trust in AI</a> <br/>
-    - <a href=" ">A Systematic Review of Attitudes, Anxiety, Acceptance, and Trust Towards Social Robots</a> <br/>
-    - <a href=" ">Establishing and Maintaining Long-term Human-Computer Relationships</a> <br/>
-    - <a href=" ">An Introduction to Ethics in Robotics and AI</a> <br/>
-    - <a href=" ">Granny and the Robots&#58; Ethical Issues in Robot Care for the Elderly</a> <br/>
-    - <a href=" ">How to Evaluate Trust in AI-Assisted Decision Making? A Survey of Empirical Methodologies</a> <br/>
-    - <a href=" ">Understanding the Impact of Anthropomorphism on Consumer Response to Chatbots from the Perspective of Trust and Relationship Norms</a> <br/>
+    - <a href="https://www.sciencedirect.com/science/article/pii/S2589004220311901">Are Friends Electric? The Benefits and Risks of Human-robot Relationships</a> <br/>
+    - <a href="https://plato.stanford.edu/entries/ethics-ai/">Ethics of Artificial Intelligence and Robotics</a> <br/>
+    - <a href="https://arxiv.org/abs/2010.07487">Formalizing Trust in Artificial Intelligence&#58; Prerequisites, Causes and Goals of Human Trust in AI</a> <br/>
+    - <a href="https://link.springer.com/article/10.1007/s12369-020-00659-4">A Systematic Review of Attitudes, Anxiety, Acceptance, and Trust Towards Social Robots</a> <br/>
+    - <a href="https://dl.acm.org/doi/10.1145/1067860.1067867">Establishing and Maintaining Long-term Human-Computer Relationships</a> <br/>
+    - <a href="https://link.springer.com/book/10.1007/978-3-030-51110-4">An Introduction to Ethics in Robotics and AI</a> <br/>
+    - <a href="https://link.springer.com/article/10.1007/s10676-010-9234-6">Granny and the Robots&#58; Ethical Issues in Robot Care for the Elderly</a> <br/>
+    - <a href="https://dl.acm.org/doi/abs/10.1145/3476068">How to Evaluate Trust in AI-Assisted Decision Making? A Survey of Empirical Methodologies</a> <br/>
+    - <a href="https://www.sciencedirect.com/science/article/abs/pii/S0306457322000620">Understanding the Impact of Anthropomorphism on Consumer Response to Chatbots from the Perspective of Trust and Relationship Norms</a> <br/>
 
 - date: 4/14
   title: >
