--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -220,7 +220,7 @@
   
 - date: 4/21
   title: >
-    Week 14: <strong>Creativity and Generation</strong>
+    Week 14: <strong>Wrapup Discussion</strong>
   topics:
   
   readings:
