--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -168,7 +168,7 @@
     
 - date: 3/31
   title: >
-    Week 11: <strong>Multimodal Social Understanding</strong>
+    Week 11: <strong>Multimodal Social Understanding</strong>  <a href="11866_week11.pdf">[synopsis]</a>
   topics:
     - A popular trend is to learn large-scale pre-trained models, such as the MERLOT Reserve model. What social skills and abilities are likely to be well suited to be modeled and understood by large-pretrained models? Which ones will require a different approach? 
     - A different approach is to explicitly represent and model intermediate stages of the social understanding process, including the detection of the unimodal and multimodal behaviors related to social interactions. One example is to explicitly learn and model graphically the behaviors, interactions and relationships between people using graphs or similar representations. When should we use such an approach to better understand social interactions? What are the pros and cons of this approach? 
@@ -190,7 +190,7 @@
 
 - date: 4/7
   title: >
-    Week 12: <strong>Relationships, Trust, and Ethics</strong>
+    Week 12: <strong>Relationships, Trust, and Ethics</strong>  <a href="11866_week12.pdf">[synopsis]</a>
   topics:
     - During the past weeks, we studied technologies to enable artificial social agents. To help us understand the potential issues related to trust and ethics, it is good to first reflect on what applications are best suited for these technologies. What are the domains where you see artificial social agents having the most impact, in the short term and in the long term? In general, in which applications modeling is it particularly important to model social intelligence? 
     - As socially-intelligent technologies are being deployed in houses and also in companies, people will start iterating with them multiple times, potentially over a long period of time, and maybe even creating relationships. What would be all the dimensions to consider when thinking of human-agent relationships? Should we replicate human-human interactions and relationships? How to define this relationship? A taxonomy of human-agent relationships?
